# prosac

./: LICENSE  README.md  example.py  prosac_from_c.py  pyproject.toml  random_consensus.py  setup.py
examples/: linear_model.py
prosac/: random_consensus.py
src/prosac/: __init__.py
