[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prosac"
version = "0.0.1"
authors = [
    { name = "William Guimont-Martin", email = "william.guimont-martin@norlab.ulaval.ca" },
]
description = "PROSAC algorithm in python"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
dependencies = ["matplotlib", "numpy", "scipy"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/willGuimont/prosac"
Issues = "https://github.com/willGuimont/prosac/issues"
